# Tw_stock_DB

./: .gitignore  CLAUDE.md  DB.yaml  DailyUpload.py  README.md  TwDatabase.yaml  build_DB.sh  build_db.py  build_db2.py  build_twse.py  clients.py  conn.py  db.yaml  main.py  pyproject.toml  requirements.txt  router.py  run.sh  tpex.sql  twse.sql  upload.py
build_DB/: __init__.py  base.py  create_DB.py  faoi.py  info.py  mgst.py  mgts.py  news.py  special_info.py  taifex.py  tpex.py  twse.py
build_DB/FAOI_sql/: DailyPrice.sql  StockName.sql  Translate.sql  UploadDate.sql  db.sql  faoi_code.csv  faoi_translate.csv
build_DB/INFO_sql/: Knowledge.sql  TradingCalendar.sql  db.sql  knowledge_data.csv  trading_calendar_data.csv
build_DB/MGST_sql/: DailyPrice.sql
build_DB/MGTS_sql/: DailyPrice.sql  StockName.sql  Translate.sql  UploadDate.sql  db.sql  mgts_code.csv
build_DB/NEWS_sql/: CNYES.sql  CNYESUploaded.sql  CTEE.sql  CTEEUploaded.sql  MoneyUDN.sql  MoneyUDNUploaded.sql  PTT.sql  PTTUploaded.sql  YTTranscript.sql  db.sql
build_DB/SPECIAL_INFO_sql/: BitcoinPrice.sql  BitcoinPriceUploaded.sql  CurrencyPrice.sql  CurrencyPriceUploaded.sql  GoldPrice.sql  GoldPriceUploaded.sql  IndicesPrice.sql  IndicesPriceUploaded.sql  OilPrice.sql  OilPriceUploaded.sql  db.sql
build_DB/TAIFEX_sql/: DailyPrice.sql  Translate.sql  UploadDate.sql  db.sql  taifex_translate.csv
data_upload/: __init__.py  base.py  faoi.py  mgts.py  taifex.py  tpex.py  twse.py
docker/: DBmaker  Dockerfile  TwDatabase.yaml  build.sh  buildDBmaker.sh  docker-compose.yml
test/: test_main.py
(+34 files in other folders)
